# OA

./: .gitignore  .markdownlint.yaml  .pymarkdown  INDEX.md  README.md  arrays_hashing.py  bfs.py  binary_search.py  bst.py  chat_room.py  circular_linked_lists.py  collections_itertools.py  cp_4am_routine.ics  dfs.py  dinning_philosophers.py  dinning_philosophers_with_concurrency.py  double_linked_list.py  dp_patterns.py  dsa.md  dynamic_programming_knapsack.py  dynamic_programming_memoization.py  fix_md.py  graph_traversal.py  graph_traversal_itertools.py  linked_lists.py  longest_palidromic_string.py  min_max-heap.py  mst.py  multiplication_algorithms.py  optimizations.py  pyproject.toml  requirements.txt  segment_tree.py  shortest_paths.py  shotetest_path_collections_itertools.py  sorting_algorithms.py  stack_queue.py  text_search_algoritms.py  todo_requests.py  topological_sort.py  (+3 more)
.github/workflows/: ci.yml
docs/: architectural_patterns.md  claude_code_strategy.md  daily_schedule.md  learning_resources.md  progress_tracker.md  resume_ats_critique.md  sprint_overview.md  sprint_overview_v1.md
docs/projects/: 01_sauti.md  02_lendstream_v2.md  03_sherehe.md  04_unicorns_v2.md  05_shamba.md  06_bsd_engine_v2.md  07_paygohub_v2.md
leetcode/: README.md
oa_dsa_prep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projects/: README.md
projects/bsd_engine_v2/: README.md
projects/lendstream_v2/: README.md
projects/paygohub_v2/: README.md
projects/sauti/: README.md
projects/shamba/: README.md
projects/sherehe/: README.md
projects/unicorns_v2/: README.md
tier_0_python/: README.md  cp_routine.md  dsa_reference.md  requirements.txt
tier_0_python/dsa/concurrency/: dining_philosophers.py  meeting_scheduler.py
tier_0_python/dsa/data_structures/: double_linked_list.py  linked_lists.py
tier_0_python/dsa/dynamic_programming/: memoization.py
tier_0_python/dsa/graphs/: bfs.py  graph_traversal_itertools.py  shortest_path_collections_itertools.py
tier_0_python/dsa/http/: requests.txt  todo_requests.py
tier_0_python/dsa/samples/: python_fundamentals.py
tier_0_python/dsa/strings/: multiplication_algorithms.py  text_search_algorithms.py
tier_1_systems/: README.md
tier_1_systems/cpp/: CMakeLists.txt  Dockerfile  README.md
tier_1_systems/cpp/samples/: cpp_fundamentals.cpp
tier_1_systems/cpp/src/: main.cpp
tier_1_systems/rust/: Dockerfile  README.md
tier_1_systems/rust/samples/: rust_fundamentals.rs
tier_2_jvm/: README.md
tier_2_jvm/java/samples/: JavaFundamentals.java
tier_2_jvm/kotlin/samples/: KotlinFundamentals.kt
tier_2_jvm/scala/samples/: ScalaFundamentals.scala
tier_3_web/: README.md
tier_3_web/javascript/samples/: js_fundamentals.js
tier_3_web/typescript/samples/: ts_fundamentals.ts
tier_4_concurrent/: README.md
tier_4_concurrent/go/samples/: go_fundamentals.go
tier_4_concurrent/zig/samples/: zig_fundamentals.zig
tier_5a_scripting/: README.md
tier_5a_scripting/elixir/samples/: elixir_fundamentals.exs
tier_5a_scripting/php/samples/: php_fundamentals.php
tier_5a_scripting/ruby/samples/: ruby_fundamentals.rb
tier_5b_lisp/: README.md
tier_5b_lisp/clojure/samples/: clojure_fundamentals.clj
tier_6_dotnet/: README.md
tier_6_dotnet/csharp/samples/: CSharpFundamentals.cs
tier_6_dotnet/fsharp/samples/: FSharpFundamentals.fs
