[project]
name = "oa-dsa-prep"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "termcolor==2.5.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle, pyflakes, isort
ignore = [
    "E741",   # ambiguous variable names — l/r/i are standard algorithm notation
    "E702",   # semicolons — used intentionally for compact multi-step test setup
    "E402",   # module import not at top — pre-existing in todo_requests.py
]

[tool.ruff.lint.per-file-ignores]
# Legacy scripts — pre-existing style, not reformatting
"bfs.py"                                    = ["W293", "W291", "W292", "E501", "I001", "W605"]
"dfs.py"                                    = ["W293", "W291", "W292", "E501", "I001", "W605"]
"chat_room.py"                              = ["W293", "E501", "I001"]
"circular_linked_lists.py"                  = ["W293", "E501", "I001"]
"double_linked_list.py"                     = ["W293", "W292", "E501", "I001"]
"dinning_philosophers_with_concurrency.py"  = ["W293", "E501", "I001", "W605"]
"dynamic_programming_knapsack.py"           = ["W293", "E501", "I001"]
"dynamic_programming_memoization.py"        = ["W293", "E501", "I001"]
"graph_traversal.py"                        = ["W293", "E501", "I001"]
"graph_traversal_itertools.py"              = ["W293", "W292", "E501", "I001"]
"linked_lists.py"                           = ["W293", "E501", "I001"]
"longest_palidromic_string.py"              = ["W291", "E501"]
"meeting_scheduler.py"                      = ["W293", "E501", "I001"]
"min_max-heap.py"                           = ["I001"]
"todo_requests.py"                          = ["E402"]
